# testApp

./: README.md
app/: CMakeLists.txt  build.gradle
app-kotlin/src/main/java/com/antonioleiva/weatherapp/ui/activities/: MainActivity.kt
app/src/androidTest/java/com/example/test/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/test/test/: BitmapUtils.java  CircleProgressView.java  CoverFlowAdapter.java  CoverFlowView.java  MainActivity.java  MyMediaPlayer.java  MySwipeRefreshLayout.java  ScaleAndTranslateImageView.java  TestActivity.java
app/src/main/java/com/example/test/test/myffmpeg/: FFmpegActivity.java  HellowJni.java  JniUtils.java
app/src/main/java/slideView/: SlideAdapter.java  SlideView.java
app/src/main/jni/: com_example_test_test_myffmpeg_HellowJni.h  com_example_test_test_myffmpeg_JniUtils.h  hellowJni.c  utils.c
app/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml  activity_test.xml
app/src/test/java/com/example/test/test/: CoverFlowViewTest.java  ExampleUnitTest.java
jiaozivideoplayer/: build.gradle
jiaozivideoplayer/src/main/java/cn/jzvd/: JZLoadingSpeed.java  JZResizeTextureView.java  JZVideoPlayer.java  JZVideoPlayerStandard.java  XHProgress.java
jiaozivideoplayer/src/main/res/layout/: jz_layout_progress.xml  jz_layout_standard.xml
study-video/: build.gradle  proguard-rules.pro
study-video/src/androidTest/java/activity/cqdsj/cn/study_videoplay/: ExampleInstrumentedTest.java
study-video/src/main/: AndroidManifest.xml
study-video/src/main/java/activity/cqdsj/cn/study_videoplay/: JKActivity.java  LoadingSpeed.java  MainActivity.java  MyHandler.java
study-video/src/main/java/activity/cqdsj/cn/study_videoplay/view/: AttentionDIntereface.java  MediaController.java  MyVideoView.java  OutlineTextView.java  ScreenResolution.java  VideoInterface.java
study-video/src/main/res/drawable/: scrubber_control_selector_holo.xml  scrubber_progress_horizontal_holo_dark.xml  selector_vpause.xml
study-video/src/main/res/layout/: activity_jk.xml  activity_main.xml  mediacontroller.xml
study-video/src/main/res/values/: colors.xml  strings.xml  styles.xml
study-video/src/test/java/activity/cqdsj/cn/study_videoplay/: ExampleUnitTest.java
